fluent-syntax/test/fixtures_behavior/select-expression-without-variants.ftl
key = { $foo -> }
//~ ERROR E0003, pos 16, args "

key = { $foo ->
    }
//~ ERROR E0003, pos 39, args "["
